Fixed a couple of warnings